code cleanup
Signed-off-by: Stefano Braghin <stefano.braghin@gmail.com>