@@ -18,8 +18,14 @@ import java.util.List;
 
 public class ReligionManager extends ResourceBasedManager<Religion> {
     private final static ReligionManager RELIGION_MANAGER = new ReligionManager();
-    public static ReligionManager getInstance() { return RELIGION_MANAGER; }
-    private ReligionManager() {super();}
+
+    public static ReligionManager getInstance() {
+        return RELIGION_MANAGER;
+    }
+
+    private ReligionManager() {
+        super();
+    }
 
     @Override
     protected Collection<ResourceEntry> getResources() {
@@ -36,7 +42,7 @@ public class ReligionManager extends ResourceBasedManager<Religion> {
 
         Religion religion = new Religion(name, group, countryCode, probability);
 
-        return Arrays.asList(new Tuple<>(key, religion));
+        return List.of(new Tuple<>(key, religion));
     }
 
     @Override
