@@ -10,10 +10,11 @@ import com.ibm.research.drl.dpt.providers.ProviderType;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.regex.Pattern;
 
 public class MACAddressIdentifier extends AbstractRegexBasedIdentifier {
-    private static final Collection<Pattern> macAddressPatterns = new ArrayList<Pattern>(Arrays.asList(
+    private static final Collection<Pattern> macAddressPatterns = new ArrayList<Pattern>(List.of(
             Pattern.compile("^([0-9a-fA-F][0-9a-fA-F]:){5}([0-9a-fA-F][0-9a-fA-F])$")
     ));
 
@@ -21,7 +22,7 @@ public class MACAddressIdentifier extends AbstractRegexBasedIdentifier {
 
     @Override
     protected boolean quickCheck(String value) {
-        for(int i = 0; i < value.length(); i++) {
+        for (int i = 0; i < value.length(); i++) {
             if (value.charAt(i) == ':') {
                 return true;
             }
